force-app/main/default/objects/Schedule__c/Schedule__c.object-meta.xml
<CustomObject>
    <label>Schedule</label>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>