force-app/main/default/objects/Schedule__c/fields/AhCounter__c.field-meta.xml
<CustomField>
    <fullName>AhCounter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ah Counter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>AhCounterSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>