force-app/main/default/objects/Schedule__c/fields/Club__c.field-meta.xml
<CustomField>
    <fullName>Club__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Club</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>ClubSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>