force-app/main/default/objects/Schedule__c/fields/Evaluator1__c.field-meta.xml
<CustomField>
    <fullName>Evaluator1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluator 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Evaluator1Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>