force-app/main/default/objects/Schedule__c/fields/Evaluator2__c.field-meta.xml
<CustomField>
    <fullName>Evaluator2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluator 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Evaluator2Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>