force-app/main/default/objects/Schedule__c/fields/GeneralEvaluator__c.field-meta.xml
<CustomField>
    <fullName>GeneralEvaluator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Evaluator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>GeneralEvaluatorSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>