force-app/main/default/objects/Schedule__c/fields/Grammarian__c.field-meta.xml
<CustomField>
    <fullName>Grammarian__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grammarian</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>GrammarianSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>