force-app/main/default/objects/Schedule__c/fields/Pledge__c.field-meta.xml
<CustomField>
    <fullName>Pledge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pledge</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>PledgeSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>