force-app/main/default/objects/Schedule__c/fields/PresidingOfficer__c.field-meta.xml
<CustomField>
    <fullName>PresidingOfficer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presiding Officer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>PresidingOfficerSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>