force-app/main/default/objects/Schedule__c/fields/SergeantAtArms__c.field-meta.xml
<CustomField>
    <fullName>SergeantAtArms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sergeant at Arms</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>SergeantAtArmsSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>