force-app/main/default/objects/Schedule__c/fields/Speaker1__c.field-meta.xml
<CustomField>
    <fullName>Speaker1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Speaker1Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>