force-app/main/default/objects/Schedule__c/fields/Speaker2__c.field-meta.xml
<CustomField>
    <fullName>Speaker2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Speaker 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Speaker2Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>