force-app/main/default/objects/Schedule__c/fields/TableTopicsMaster__c.field-meta.xml
<CustomField>
    <fullName>TableTopicsMaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Table Topics Master</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>TableTopicsMasterSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>