force-app/main/default/objects/Schedule__c/fields/Timer__c.field-meta.xml
<CustomField>
    <fullName>Timer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Timer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>TimerSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>