force-app/main/default/objects/Schedule__c/fields/Toastmaster__c.field-meta.xml
<CustomField>
    <fullName>Toastmaster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toastmaster</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>ToastmasterSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>