force-app/main/default/objects/Schedule__c/fields/ToastmasterMinute__c.field-meta.xml
<CustomField>
    <fullName>ToastmasterMinute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Toastmaster Minute</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>ToastmasterMinuteSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>