force-app/main/default/objects/Schedule__c/fields/WordOfTheDay__c.field-meta.xml
<CustomField>
    <fullName>WordOfTheDay__c</fullName>
    <label>Word of The Day</label>
    <length>155</length>
    <type>Text</type>
</CustomField>