force-app/main/default/objects/Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Club__c</columns>
    <columns>MeetingDate__c</columns>
    <columns>Theme__c</columns>
    <columns>WordOfTheDay__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>